Add all papers by J. Zabczyk.

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: c7afb2015def7eb13ca854c161ab01d4299c678e
+% Commit: 5faee29f45d9cc97923aad32e6f3c775ef71da0b
 % Date: 2023-11-16
 % ---------------------------
 
@@ -4268,6 +4268,34 @@
   doi           = {10.1016/j.jde.2012.06.022},
   url           = {https://doi.org/10.1016/j.jde.2012.06.022}
 }
+@book{barski.zabczyk:20:mathematics,
+  author        = {Barski, Micha\l and Zabczyk, Jerzy},
+  title         = {Mathematics of the bond market---a {L}\'{e}vy processes approach},
+  series        = {Encyclopedia of Mathematics and its Applications},
+  volume        = {174},
+  publisher     = {Cambridge University Press, Cambridge},
+  year          = {2020},
+  pages         = {xvi+382},
+  isbn          = {978-1-107-10129-6},
+  mrclass       = {91-02 (60G51 62P20 91G15 91G30)},
+  mrnumber      = {4406772},
+  doi           = {10.1017/9781316181836},
+  url           = {https://doi.org/10.1017/9781316181836}
+}
+@book{barski.zabczyk:20:mathematics*1,
+  author        = {Barski, Micha\l and Zabczyk, Jerzy},
+  title         = {Mathematics of the bond market---a {L}\'{e}vy processes approach},
+  series        = {Encyclopedia of Mathematics and its Applications},
+  volume        = {174},
+  publisher     = {Cambridge University Press, Cambridge},
+  year          = {2020},
+  pages         = {xvi+382},
+  isbn          = {978-1-107-10129-6},
+  mrclass       = {91-02 (60G51 62P20 91G15 91G30)},
+  mrnumber      = {4406772},
+  doi           = {10.1017/9781316181836},
+  url           = {https://doi.org/10.1017/9781316181836}
+}
 @article{barski.zabczyk:20:on,
   author        = {Barski, Micha\l and Zabczyk, Jerzy},
   title         = {On {CIR} equations with general factors},
@@ -4283,6 +4311,22 @@
   url           = {https://doi.org/10.1137/19M1292771}
 }
 @article{barski.zabczyk:21:note,
+  author        = {Barski, Micha\l and Zabczyk, Jerzy},
+  title         = {A note on generalized {CIR} equations},
+  journal       = {Commun. Inf. Syst.},
+  fjournal      = {Communications in Information and Systems},
+  volume        = {21},
+  year          = {2021},
+  number        = {2},
+  pages         = {209--218},
+  issn          = {1526-7555,2163-4548},
+  mrclass       = {60H10 (60G51 91G30)},
+  mrnumber      = {4273497},
+  mrreviewer    = {Christel\ Geiss},
+  doi           = {10.4310/CIS.2021.v21.n2.a2},
+  url           = {https://doi.org/10.4310/CIS.2021.v21.n2.a2}
+}
+@article{barski.zabczyk:21:note*1,
   author        = {Barski, Micha\l and Zabczyk, Jerzy},
   title         = {A note on generalized {CIR} equations},
   journal       = {Commun. Inf. Syst.},
@@ -7189,6 +7233,17 @@
   year          = {2011},
   mrclass       = {60B20 (01A60 60-03)},
   mrnumber      = {2932622}
+}
+@incollection{bojdecki..ea:74:some,
+  author        = {Bojdecki, Tomasz and \L o\'{s}, Jerzy and Skomorochin, Aleksander and Zabczyk, Jerzy},
+  title         = {Some properties of ordered finite-dimensional spaces},
+  booktitle     = {Mathematical models in economics ({P}roc. {S}ympos. and {C}onf. on von {N}eumann {M}odels, {W}arsaw, 1972)},
+  pages         = {315--327},
+  publisher     = {North-Holland, Amsterdam-London},
+  year          = {1974},
+  mrclass       = {46A40},
+  mrnumber      = {377455},
+  mrreviewer    = {H.\ J.\ Biesterfeldt, Jr.}
 }
 @article{bojdecki.gorostiza.ea:97:time-localization,
   author        = {Bojdecki, Tomasz and Gorostiza, Luis G. and Nualart, David},
@@ -21745,6 +21800,20 @@
   doi           = {10.2307/1993838},
   url           = {https://doi.org/10.2307/1993838}
 }
+@incollection{ciesielski.zabczyk:79:note,
+  author        = {Ciesielski, Z. and Zabczyk, J.},
+  title         = {A note on a selection problem},
+  booktitle     = {Probability theory ({P}apers, {VII}th {S}emester, {S}tefan {B}anach {I}nternat. {M}ath. {C}enter, {W}arsaw, 1976)},
+  series        = {Banach Center Publ.},
+  volume        = {5},
+  pages         = {47--51},
+  publisher     = {PWN, Warsaw},
+  year          = {1979},
+  isbn          = {83-01-01492-X},
+  mrclass       = {60G40 (62L15)},
+  mrnumber      = {561467},
+  mrreviewer    = {S.\ M.\ Samuels}
+}
 @inproceedings{cirel-son.ibragimov.ea:76:norms,
   author        = {Cirel{\cprime}son, B. S. and Ibragimov, I. A. and Sudakov, V. N.},
   title         = {Norms of {G}aussian sample functions},
@@ -23385,6 +23454,34 @@
   mrreviewer    = {Jos\'{e} Rafael Le\'{o}n},
   doi           = {10.1016/S0304-4149(01)00085-0},
   url           = {https://doi.org/10.1016/S0304-4149(01)00085-0}
+}
+@article{cowan.zabczyk:76:new,
+  author        = {Cowan, R. and Zabczyk, J.},
+  title         = {A new version of the best choice problem},
+  journal       = {Bull. Acad. Polon. Sci. S\'{e}r. Sci. Math. Astronom. Phys.},
+  fjournal      = {Bulletin de l'Acad\'{e}mie Polonaise des Sciences. S\'{e}rie des Sciences Math\'{e}matiques, Astronomiques et Physiques},
+  volume        = {24},
+  year          = {1976},
+  number        = {9},
+  pages         = {773--778},
+  issn          = {0001-4117},
+  mrclass       = {60G40 (62L15)},
+  mrnumber      = {428424},
+  mrreviewer    = {S.\ M.\ Samuels}
+}
+@article{cowan.zabczyk:78:optimal,
+  author        = {Cowan, R. and Zabczyk, J.},
+  title         = {An optimal selection problem associated with the {P}oisson process},
+  journal       = {Teor. Veroyatnost. i Primenen.},
+  fjournal      = {Akademiya Nauk SSSR. Teoriya Veroyatnosteu{i} i ee Primeneniya},
+  volume        = {23},
+  year          = {1978},
+  number        = {3},
+  pages         = {606--614},
+  issn          = {0040-361X},
+  mrclass       = {60G40},
+  mrnumber      = {509733},
+  mrreviewer    = {S.\ M.\ Samuels}
 }
 @article{cox.fleischmann.ea:96:comparison,
   author        = {Cox, J. Theodore and Fleischmann, Klaus and Greven, Andreas},
@@ -47837,6 +47934,21 @@
   doi           = {10.1016/j.crma.2009.03.001},
   url           = {https://doi.org/10.1016/j.crma.2009.03.001}
 }
+@incollection{mazziotto.stettner.ea:85:on,
+  author        = {Mazziotto, G. and Stettner, \L . and Szpirglas, J. and Zabczyk, J.},
+  title         = {On impulse control with partial observation},
+  booktitle     = {Stochastic differential systems ({M}arseille-{L}uminy, 1984)},
+  series        = {Lect. Notes Control Inf. Sci.},
+  volume        = {69},
+  pages         = {296--308},
+  publisher     = {Springer, Berlin},
+  year          = {1985},
+  isbn          = {3-540-15176-1},
+  mrclass       = {93E03},
+  mrnumber      = {798333},
+  doi           = {10.1007/BFb0005085},
+  url           = {https://doi.org/10.1007/BFb0005085}
+}
 @article{mazziotto.stettner.ea:88:on,
   author        = {Mazziotto, G. and Stettner, \L . and Szpirglas, J. and Zabczyk, J.},
   title         = {On impulse control with partial observation},
@@ -56214,6 +56326,20 @@
   year          = {2021},
   number        = {3},
   pages         = {Art. 10, 16},
+  issn          = {2689-6931},
+  mrclass       = {60H15 (35Q35 60J35)},
+  mrnumber      = {4304481},
+  mrreviewer    = {Liping\ Li}
+}
+@article{peszat.twardowska.ea:21:ergodicity*1,
+  author        = {Peszat, Szymon and Twardowska, Krystyna and Zabczyk, Jerzy},
+  title         = {Ergodicity of {B}urgers' system},
+  journal       = {J. Stoch. Anal.},
+  fjournal      = {Journal of Stochastic Analysis. JOSA},
+  volume        = {2},
+  year          = {2021},
+  number        = {3},
+  pages         = {Art. 10, 16},
   mrclass       = {60H15 (35Q35 60J35)},
   mrnumber      = {4304481}
 }
@@ -57035,6 +57161,21 @@
   mrreviewer    = {David Applebaum},
   doi           = {10.1007/s00440-009-0243-5},
   url           = {https://doi.org/10.1007/s00440-009-0243-5}
+}
+@article{pritchard.zabczyk:81:stability,
+  author        = {Pritchard, A. J. and Zabczyk, J.},
+  title         = {Stability and stabilizability of infinite-dimensional systems},
+  journal       = {SIAM Rev.},
+  fjournal      = {SIAM Review. A Publication of the Society for Industrial and Applied Mathematics},
+  volume        = {23},
+  year          = {1981},
+  number        = {1},
+  pages         = {25--52},
+  issn          = {0036-1445},
+  mrclass       = {93D20},
+  mrnumber      = {605439},
+  doi           = {10.1137/1023003},
+  url           = {https://doi.org/10.1137/1023003}
 }
 @book{protter.weinberger:84:maximum,
   author        = {Protter, Murray H. and Weinberger, Hans F.},
@@ -61514,6 +61655,36 @@
   mrreviewer    = {Marek\ Ka\l uszka},
   doi           = {10.1109/18.165450},
   url           = {https://doi.org/10.1109/18.165450}
+}
+@incollection{stettner.zabczyk:80:stochastic,
+  author        = {Stettner, \L . and Zabczyk, J.},
+  title         = {Stochastic version of a penalty method},
+  booktitle     = {Optimization techniques ({P}roc. {N}inth {IFIP} {C}onf., {W}arsaw, 1979), {P}art 1},
+  series        = {Lect. Notes Control Inf. Sci.},
+  volume        = {22},
+  pages         = {179--183},
+  publisher     = {Springer, Berlin-New York},
+  year          = {1980},
+  isbn          = {3-540-10080-6},
+  mrclass       = {49D30},
+  mrnumber      = {588530},
+  mrreviewer    = {Bension\ Kurtaran}
+}
+@article{stettner.zabczyk:80:strong,
+  author        = {Stettner, \L . and Zabczyk, J.},
+  title         = {Strong envelopes of stochastic processes and a penalty method},
+  journal       = {Stochastics},
+  fjournal      = {Stochastics},
+  volume        = {4},
+  year          = {1980/81},
+  number        = {4},
+  pages         = {267--280},
+  issn          = {0090-9491},
+  mrclass       = {60G44 (60J35 62L15)},
+  mrnumber      = {609689},
+  mrreviewer    = {F.\ B.\ Knight},
+  doi           = {10.1080/17442508108833167},
+  url           = {https://doi.org/10.1080/17442508108833167}
 }
 @article{stewartson.stuart:71:non-linear,
   author        = {Stewartson, K. and Stuart, J. T.},
@@ -66124,6 +66295,20 @@
   author        = {Zabczyk, Jerzy},
   title         = {Mathematical control theory---an introduction},
   series        = {Systems \& Control: Foundations \& Applications},
+  edition       = {Second},
+  publisher     = {Birkh\"{a}user/Springer, Cham},
+  year          = {[2020] \copyright 2020},
+  pages         = {xxvi+336},
+  isbn          = {978-3-030-44776-2; 978-3-030-44778-6},
+  mrclass       = {49-01 (34Dxx 47N70 93-01 93Bxx)},
+  mrnumber      = {4211767},
+  doi           = {10.1007/978-3-030-44778-6},
+  url           = {https://doi.org/10.1007/978-3-030-44778-6}
+}
+@book{zabczyk:20:mathematical*1,
+  author        = {Zabczyk, Jerzy},
+  title         = {Mathematical control theory---an introduction},
+  series        = {Systems \& Control: Foundations \& Applications},
   note          = {Second edition [of 2348543]},
   publisher     = {Birkh\"{a}user/Springer, Cham},
   year          = {[2020] \copyright 2020},
@@ -66143,11 +66328,429 @@
   year          = {2021},
   number        = {1-2},
   pages         = {87--98},
+  issn          = {0066-2216,1730-6272},
+  mrclass       = {93B05 (47N20 93C25)},
+  mrnumber      = {4358435},
+  mrreviewer    = {Alina\ Ilinca\ Lazu},
+  doi           = {10.4064/ap200421-29-9},
+  url           = {https://doi.org/10.4064/ap200421-29-9}
+}
+@article{zabczyk:21:controllable*1,
+  author        = {Zabczyk, Jerzy},
+  title         = {Controllable systems with vanishing energy},
+  journal       = {Ann. Polon. Math.},
+  fjournal      = {Annales Polonici Mathematici},
+  volume        = {127},
+  year          = {2021},
+  number        = {1-2},
+  pages         = {87--98},
   issn          = {0066-2216},
   mrclass       = {93B05 (47N20 93C25)},
   mrnumber      = {4358435},
   doi           = {10.4064/ap200421-29-9},
   url           = {https://doi.org/10.4064/ap200421-29-9}
+}
+@article{zabczyk:69:probabilites,
+  author        = {Zabczyk, J.},
+  title         = {Probabilit\'{e}s d'atteintes d'un ensemble dans les cha\^{i}nes de {M}arkov},
+  journal       = {Bull. Acad. Polon. Sci. S\'{e}r. Sci. Math. Astronom. Phys.},
+  fjournal      = {Bulletin de l'Acad\'{e}mie Polonaise des Sciences. S\'{e}rie des Sciences Math\'{e}matiques, Astronomiques et Physiques},
+  volume        = {17},
+  year          = {1969},
+  pages         = {827--831},
+  issn          = {0001-4117},
+  mrclass       = {60.65},
+  mrnumber      = {285054},
+  mrreviewer    = {A.\ Fuchs}
+}
+@article{zabczyk:70:sur,
+  author        = {Zabczyk, J.},
+  title         = {Sur la th\'{e}orie semi-classique du potentiel pour les processus \`a accroissements ind\'{e}pendants},
+  journal       = {Studia Math.},
+  fjournal      = {Polska Akademia Nauk. Instytut Matematyczny. Studia Mathematica},
+  volume        = {35},
+  year          = {1970},
+  pages         = {227--247},
+  issn          = {0039-3223,1730-6337},
+  mrclass       = {60.62},
+  mrnumber      = {267643},
+  mrreviewer    = {J.\ A.\ Beekman},
+  doi           = {10.4064/sm-35-3-227-247},
+  url           = {https://doi.org/10.4064/sm-35-3-227-247}
+}
+@article{zabczyk:72:mathematical,
+  author        = {Zabczyk, Jerzy},
+  title         = {A mathematical correction problem},
+  journal       = {Kybernetika (Prague)},
+  fjournal      = {Kybernetika},
+  volume        = {8},
+  year          = {1972},
+  pages         = {317--322},
+  issn          = {0023-5954,1805-949X},
+  mrclass       = {93E20},
+  mrnumber      = {339879},
+  mrreviewer    = {R.\ S.\ Bucy}
+}
+@article{zabczyk:72:on,
+  author        = {Zabczyk, J.},
+  title         = {On some integral equation},
+  journal       = {Colloq. Math.},
+  fjournal      = {Colloquium Mathematicum},
+  volume        = {25},
+  year          = {1972},
+  pages         = {315--318},
+  issn          = {0010-1354,1730-6302},
+  mrclass       = {45A05},
+  mrnumber      = {326321},
+  mrreviewer    = {M.\ Rossler},
+  doi           = {10.4064/cm-25-2-315-318},
+  url           = {https://doi.org/10.4064/cm-25-2-315-318}
+}
+@article{zabczyk:73:optimal,
+  author        = {Zabczyk, J.},
+  title         = {Optimal control by means of switchings},
+  journal       = {Studia Math.},
+  fjournal      = {Polska Akademia Nauk. Instytut Matematyczny. Studia Mathematica},
+  volume        = {45},
+  year          = {1973},
+  pages         = {161--171},
+  issn          = {0039-3223,1730-6337},
+  mrclass       = {93E20},
+  mrnumber      = {441528},
+  doi           = {10.4064/sm-45-2-161-171},
+  url           = {https://doi.org/10.4064/sm-45-2-161-171}
+}
+@article{zabczyk:73:remarks,
+  author        = {Zabczyk, J.},
+  title         = {Remarks on stochastic derivation},
+  journal       = {Bull. Acad. Polon. Sci. S\'{e}r. Sci. Math. Astronom. Phys.},
+  fjournal      = {Bulletin de l'Acad\'{e}mie Polonaise des Sciences. S\'{e}rie des Sciences Math\'{e}matiques, Astronomiques et Physiques},
+  volume        = {21},
+  year          = {1973},
+  pages         = {263--269},
+  issn          = {0001-4117},
+  mrclass       = {60H99},
+  mrnumber      = {321182},
+  mrreviewer    = {M.\ Cs\"{o}rg\H{o}}
+}
+@incollection{zabczyk:73:stochastic,
+  author        = {Zabczyk, J.},
+  title         = {Stochastic control with at most denumerable number of corrections},
+  booktitle     = {Fifth {C}onference on {O}ptimization {T}echniques ({R}ome, 1973), {P}art {I}},
+  series        = {Lecture Notes in Comput. Sci.},
+  volume        = {Vol. 3},
+  pages         = {370--374},
+  publisher     = {Springer, Berlin-New York},
+  year          = {1973},
+  mrclass       = {93E20},
+  mrnumber      = {456882}
+}
+@article{zabczyk:74:remarks,
+  author        = {Zabczyk, J.},
+  title         = {Remarks on the control of discrete-time distributed parameter systems},
+  journal       = {SIAM J. Control},
+  fjournal      = {SIAM J. Control},
+  volume        = {12},
+  year          = {1974},
+  pages         = {721--735},
+  mrclass       = {49A25 (93C55)},
+  mrnumber      = {410506},
+  mrreviewer    = {R.\ N. P. Singh}
+}
+@incollection{zabczyk:75:note,
+  author        = {Zabczyk, J.},
+  title         = {A note on semipolar sets for processes with independent increments},
+  booktitle     = {Probability---{W}inter {S}chool ({P}roc. {F}ourth {W}inter {S}chool, {K}arpacz, 1975)},
+  series        = {Lecture Notes in Math.},
+  volume        = {Vol. 472},
+  pages         = {277--283},
+  publisher     = {Springer, Berlin-New York},
+  year          = {1975},
+  mrclass       = {60J30},
+  mrnumber      = {394895},
+  mrreviewer    = {Jacques\ Az\'{e}ma}
+}
+@article{zabczyk:75:note*1,
+  author        = {Zabczyk, Jerzy},
+  title         = {A note on the exponential stability of a matrix {R}iccati equation of stochastic control},
+  journal       = {Kybernetika (Prague)},
+  fjournal      = {Kybernetika},
+  volume        = {11},
+  year          = {1975},
+  number        = {3},
+  pages         = {218--222},
+  issn          = {0023-5954,1805-949X},
+  mrclass       = {34D05 (93E20)},
+  mrnumber      = {393693},
+  mrreviewer    = {Ruth\ Curtain}
+}
+@article{zabczyk:75:note*2,
+  author        = {Zabczyk, J.},
+  title         = {A note on {$C\sb{0}$}-semigroups},
+  journal       = {Bull. Acad. Polon. Sci. S\'{e}r. Sci. Math. Astronom. Phys.},
+  fjournal      = {Bulletin de l'Acad\'{e}mie Polonaise des Sciences. S\'{e}rie des Sciences Math\'{e}matiques, Astronomiques et Physiques},
+  volume        = {23},
+  year          = {1975},
+  number        = {8},
+  pages         = {895--898},
+  issn          = {0001-4117},
+  mrclass       = {47D05},
+  mrnumber      = {383144},
+  mrreviewer    = {Marshall\ Slemrod}
+}
+@article{zabczyk:75:on,
+  author        = {Zabczyk, Jerzy},
+  title         = {On optimal stochastic control of discrete-time systems in {H}ilbert space},
+  journal       = {SIAM J. Control},
+  fjournal      = {SIAM J. Control},
+  volume        = {13},
+  year          = {1975},
+  number        = {6},
+  pages         = {1217--1234},
+  mrclass       = {93E20},
+  mrnumber      = {384291},
+  mrreviewer    = {Ruth\ Curtain}
+}
+@article{zabczyk:75:remarks,
+  author        = {Zabczyk, J.},
+  title         = {Remarks on the algebraic {R}iccati equation in {H}ilbert space},
+  journal       = {Appl. Math. Optim.},
+  fjournal      = {Applied Mathematics and Optimization},
+  volume        = {2},
+  year          = {1975/76},
+  number        = {3},
+  pages         = {251--258},
+  issn          = {0095-4616,1432-0606},
+  mrclass       = {93C25 (47A50 49A25 93B05)},
+  mrnumber      = {479550},
+  doi           = {10.1007/BF01464270},
+  url           = {https://doi.org/10.1007/BF01464270}
+}
+@incollection{zabczyk:76:introduction,
+  author        = {Zabczyk, J.},
+  title         = {An introduction to probability theory},
+  booktitle     = {Control theory and topics in functional analysis ({I}nternat. {S}em., {I}nternat. {C}entre {T}heoret. {P}hys., {T}rieste, 1974), {V}ol. {I}},
+  pages         = {418--462},
+  publisher     = {Internat. Atomic Energy Agency, Vienna},
+  year          = {1976},
+  mrclass       = {60-01 (60G35 93EXX)},
+  mrnumber      = {517120}
+}
+@incollection{zabczyk:76:stochastic,
+  author        = {Zabczyk, J.},
+  title         = {Stochastic control of discrete-time systems},
+  booktitle     = {Control theory and topics in functional analysis ({I}nternat. {S}em., {I}nternat. {C}entre {T}heoret. {P}hys., {T}rieste, 1974), {V}ol. {III}},
+  pages         = {187--224},
+  publisher     = {Internat. Atomic Energy Agency, Vienna},
+  year          = {1976},
+  mrclass       = {93E20},
+  mrnumber      = {529600}
+}
+@article{zabczyk:77:infinite-dimensional,
+  author        = {Zabczyk, Jerzy},
+  title         = {Infinite-dimensional systems in control theory},
+  note          = {With discussion},
+  journal       = {Bull. Inst. Internat. Statist.},
+  fjournal      = {Bulletin de l'Institut International de Statistique},
+  volume        = {47},
+  year          = {1977},
+  number        = {2},
+  pages         = {286--310, 311--314},
+  mrclass       = {93C25 (93B05 93E20)},
+  mrnumber      = {617581},
+  mrreviewer    = {M.\ H. A. Davis}
+}
+@incollection{zabczyk:77:selection,
+  author        = {Zabczyk, J.},
+  title         = {A selection problem associated to a renewal process},
+  booktitle     = {New trends in systems analysis ({P}roc. {I}nternat. {S}ympos., {V}ersailles, 1976)},
+  series        = {Lect. Notes Control Inf. Sci.},
+  volume        = {Vol. 2},
+  pages         = {508--515},
+  publisher     = {Springer, Berlin-New York},
+  year          = {1977},
+  isbn          = {3-540-08406-1},
+  mrclass       = {60G40 (62L15)},
+  mrnumber      = {488270},
+  mrreviewer    = {S.\ M.\ Samuels}
+}
+@article{zabczyk:77:stability,
+  author        = {Zabczyk, Jerzy},
+  title         = {Stability properties of the discrete {R}iccati operator equation},
+  journal       = {Kybernetika (Prague)},
+  fjournal      = {Kybernetika},
+  volume        = {13},
+  year          = {1977},
+  number        = {1},
+  pages         = {1--10},
+  issn          = {0023-5954,1805-949X},
+  mrclass       = {93D99},
+  mrnumber      = {453080},
+  mrreviewer    = {K.\ B.\ Datta}
+}
+@article{zabczyk:78:on,
+  author        = {Zabczyk, Jerzy},
+  title         = {On decomposition of generators},
+  journal       = {SIAM J. Control Optim.},
+  fjournal      = {SIAM Journal on Control and Optimization},
+  volume        = {16},
+  year          = {1978},
+  number        = {4},
+  pages         = {523--534},
+  issn          = {0363-0129},
+  mrclass       = {47D05 (34G05)},
+  mrnumber      = {512915},
+  mrreviewer    = {H.\ O.\ Fattorini},
+  doi           = {10.1137/0316035},
+  url           = {https://doi.org/10.1137/0316035}
+}
+@incollection{zabczyk:78:semigroup,
+  author        = {Zabczyk, Jerzy},
+  title         = {A semigroup approach to boundary value control},
+  booktitle     = {Control of distributed parameter systems ({P}roc. {S}econd {IFAC} {S}ympos., {C}oventry, 1977)},
+  pages         = {99--107},
+  publisher     = {IFAC, D\"{u}sseldorf},
+  year          = {1978},
+  isbn          = {0-08-022018-5},
+  mrclass       = {93C99},
+  mrnumber      = {534864},
+  mrreviewer    = {Andrzej\ W.\ Olbrot}
+}
+@incollection{zabczyk:79:introduction,
+  author        = {Zabczyk, J.},
+  title         = {Introduction to the theory of optimal stopping},
+  booktitle     = {Stochastic control theory and stochastic differential systems ({P}roc. {W}orkshop, {D}eutsch. {F}orschungsgemeinsch., {U}niv. {B}onn, {B}ad {H}onnef, 1979)},
+  series        = {Lect. Notes Control Inf. Sci.},
+  volume        = {16},
+  pages         = {227--250},
+  publisher     = {Springer, Berlin-New York},
+  year          = {1979},
+  isbn          = {3-540-09480-6},
+  mrclass       = {60G40 (62L15)},
+  mrnumber      = {547474}
+}
+@incollection{zabczyk:79:on,
+  author        = {Zabczyk, Jerzy},
+  title         = {On the stability of infinite-dimensional linear stochastic systems},
+  booktitle     = {Probability theory ({P}apers, {VII}th {S}emester, {S}tefan {B}anach {I}nternat. {M}ath. {C}enter, {W}arsaw, 1976)},
+  series        = {Banach Center Publ.},
+  volume        = {5},
+  pages         = {273--281},
+  publisher     = {PWN, Warsaw},
+  year          = {1979},
+  isbn          = {83-01-01492-X},
+  mrclass       = {93E15 (60H10)},
+  mrnumber      = {561486},
+  mrreviewer    = {T.\ K.\ Sirazetdinov}
+}
+@incollection{zabczyk:79:stabilization,
+  author        = {Zabczyk, J.},
+  title         = {Stabilization of boundary control systems},
+  booktitle     = {International {S}ymposium on {S}ystems {O}ptimization and {A}nalysis ({R}ocquencourt, 1978)},
+  series        = {Lect. Notes Control Inf. Sci.},
+  volume        = {14},
+  pages         = {321--332},
+  publisher     = {Springer, Berlin-New York},
+  year          = {1979},
+  isbn          = {3-540-09447-4},
+  mrclass       = {93D99 (93B05)},
+  mrnumber      = {557355}
+}
+@article{zabczyk:80:erratum,
+  author        = {Zabczyk, Jerzy},
+  title         = {Erratum: ``{O}n decomposition of generators'' [{SIAM} {J}. {C}ontrol {O}ptim. {\bf 16} (1978), no. 4, 523--534; {MR} {\bf 58} \#23757]},
+  journal       = {SIAM J. Control Optim.},
+  fjournal      = {SIAM Journal on Control and Optimization},
+  volume        = {18},
+  year          = {1980},
+  number        = {3},
+  pages         = {325},
+  issn          = {0363-0129},
+  mrclass       = {47D05},
+  mrnumber      = {569022},
+  doi           = {10.1137/0318024},
+  url           = {https://doi.org/10.1137/0318024}
+}
+@article{zabczyk:81:controllability,
+  author        = {Zabczyk, Jerzy},
+  title         = {Controllability of stochastic linear systems},
+  journal       = {Systems Control Lett.},
+  fjournal      = {Systems \& Control Letters},
+  volume        = {1},
+  year          = {1981/82},
+  number        = {1},
+  pages         = {25--31},
+  issn          = {0167-6911,1872-7956},
+  mrclass       = {93E99},
+  mrnumber      = {667324},
+  doi           = {10.1016/S0167-6911(81)80008-4},
+  url           = {https://doi.org/10.1016/S0167-6911(81)80008-4}
+}
+@incollection{zabczyk:82:controllability,
+  author        = {Zabczyk, J.},
+  title         = {Controllability of stochastic systems},
+  booktitle     = {Stochastic differential systems ({B}ad {H}onnef, 1982)},
+  series        = {Lect. Notes Control Inf. Sci.},
+  volume        = {43},
+  pages         = {144--154},
+  publisher     = {Springer, Berlin},
+  year          = {1982},
+  isbn          = {3-540-12061-0},
+  mrclass       = {93E03},
+  mrnumber      = {814113},
+  doi           = {10.1007/BFb0044295},
+  url           = {https://doi.org/10.1007/BFb0044295}
+}
+@article{zabczyk:83:stationary,
+  author        = {Zabczyk, Jerzy},
+  title         = {Stationary distribution for linear equations driven by general noise},
+  journal       = {Bull. Polish Acad. Sci. Math.},
+  fjournal      = {Bulletin of the Polish Academy of Sciences. Mathematics},
+  volume        = {31},
+  year          = {1983},
+  number        = {3-4},
+  pages         = {197--209},
+  issn          = {0239-7269},
+  mrclass       = {60H10 (60G10)},
+  mrnumber      = {742808},
+  mrreviewer    = {Ludwig\ Arnold}
+}
+@incollection{zabczyk:83:stopping,
+  author        = {Zabczyk, J.},
+  title         = {Stopping games and {D}irichlet spaces},
+  booktitle     = {Control of distributed parameter systems, 1982 ({T}oulouse, 1982)},
+  pages         = {413--417},
+  publisher     = {IFAC, Laxenburg},
+  year          = {1983},
+  isbn          = {0-08-029361-1},
+  mrclass       = {90D15 (49A60 60J45)},
+  mrnumber      = {811257}
+}
+@inproceedings{zabczyk:84:stopping,
+  author        = {Zabczyk, J.},
+  title         = {Stopping problems in stochastic control},
+  booktitle     = {Proceedings of the {I}nternational {C}ongress of {M}athematicians, {V}ol. 1, 2 ({W}arsaw, 1983)},
+  pages         = {1425--1437},
+  publisher     = {PWN, Warsaw},
+  year          = {1984},
+  isbn          = {83-01-05523-5},
+  mrclass       = {60G40 (90C40 93E05)},
+  mrnumber      = {804789},
+  mrreviewer    = {P.\ Neumann}
+}
+@article{zabczyk:84:stopping*1,
+  author        = {Zabczyk, J.},
+  title         = {Stopping games for symmetric {M}arkov processes},
+  journal       = {Probab. Math. Statist.},
+  fjournal      = {Probability and Mathematical Statistics},
+  volume        = {4},
+  year          = {1984},
+  number        = {2},
+  pages         = {185--196},
+  issn          = {0208-4147},
+  mrclass       = {49A60 (60J45 93E05)},
+  mrnumber      = {792784},
+  mrreviewer    = {M.\ Fukushima}
 }
 @article{zabczyk:85:exit,
   author        = {Zabczyk, J.},
